--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -13,6 +13,26 @@
 navigation:
   - title: Introduction
     location: index.md
-  - title: Code examples
-    location: code.md
+
+    children:
+
+    - title: Spelling
+      location: index.md#spelling
+    - title: Contractions
+      location: index.md#contractions
+    - title: Headings and capitalisation
+      location: index.md#headings-and-capitalisation
+    - title: Dates
+      location: index.md#dates
+    - title: Numbers
+      location: index.md#numbers
+    - title: Code examples in documentation
+      location: index.md#code-examples-in-documentation
+    - title: Hyperlinks
+      location: index.md#hyperlinks
+    - title: Images
+      location: index.md#images
+    - title: Words and phrases to avoid
+      location: index.md#words-and-phrases-to-avoid
+ 
 
