--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -17,22 +17,22 @@ navigation:
     children:
 
     - title: Spelling
-      location: #spelling
+      location: '#spelling'
     - title: Contractions
-      location: #contractions
+      location: '#contractions'
     - title: Headings and capitalisation
-      location: #headings-and-capitalisation
+      location: '#headings-and-capitalisation'
     - title: Dates
-      location: #dates
+      location: '#dates'
     - title: Numbers
-      location: #numbers
+      location: '#numbers'
     - title: Code examples in documentation
-      location: #code-examples-in-documentation
+      location: '#code-examples-in-documentation'
     - title: Hyperlinks
-      location: #hyperlinks
+      location: '#hyperlinks'
     - title: Images
-      location: #images
+      location: '#images'
     - title: Words and phrases to avoid
-      location: #words-and-phrases-to-avoid
+      location: '#words-and-phrases-to-avoid'
  
 
