--- a/styles/Canonical/010-Punctuation-double-spaces.yml
+++ b/styles/Canonical/010-Punctuation-double-spaces.yml
@@ -1,4 +1,4 @@
-# 10 - Punctuation - No double space after '.'
+# 10 - Punctuation - No double space after '.', `?`, or `!`
 
 extends: existence
 message: "'%s' should have one space."
