Changed gonna/gotta suggestions

--- a/styles/Canonical/006-Contractions-forbidden.yml
+++ b/styles/Canonical/006-Contractions-forbidden.yml
@@ -15,5 +15,5 @@ swap:
   may've: may have
   mightn't: might not
   might've: might have
-  gonna: will
-  gotta: must
+  gonna: going to
+  gotta: got to
