--- a/styles/Canonical/009-headings-no-links.yml
+++ b/styles/Canonical/009-headings-no-links.yml
@@ -8,7 +8,9 @@ level: warning
 scope: raw
 tokens:
   - '[\#]+ [ \w]+\[[\w]+[ \w]*\]\([.\w]+\)'
+  - '[ \w]+\[[\w]+[ \w]*\]\([.\w]+\)[^\n]*\n[=-]{2,}\n'
   - '[\#]+ [ \w]+<http[^\n]+>'
+  - '[ \w]+<http[^\n]+>[^\n]*\n[=-]{2,}\n'
   - '[ \w]+`[ \w]*<[\.a-zA-Z0-9\/]+>`_\n(.)\1{3,}\n'
   - '[ \w]+\:ref\:`[^\n]+`[ \w]*\n(.)\2{3,}\n'
   - '[ \w]+\:doc\:`[^\n]+`[ \w]*\n(.)\3{3,}\n'
