--- a/styles/Canonical/009-headings-no-links.yml
+++ b/styles/Canonical/009-headings-no-links.yml
@@ -12,5 +12,8 @@ tokens:
   - '[\#]+ [ \w]+<http[^\n]+>'
   - '[ \w]+<http[^\n]+>[^\n]*\n[=-]{2,}\n'
   - '[ \w]+`[ \w]*<[\.a-zA-Z0-9\/]+>`_\n(.)\1{3,}\n'
-  - '[ \w]+\:ref\:`[^\n]+`[ \w]*\n(.)\2{3,}\n'
-  - '[ \w]+\:doc\:`[^\n]+`[ \w]*\n(.)\3{3,}\n'
+  - '[ \w]+[ \w]*<[:\.a-zA-Z0-9\/]+>[ \w]*\n(.)\2{3,}\n'
+  - '[ \w]+\:ref\:`[^\n]+`[ \w]*\n(.)\3{3,}\n'
+  - '[ \w]+\:doc\:`[^\n]+`[ \w]*\n(.)\4{3,}\n'
+  - '[ \w]+\{ref\}`[^\n]+`[ \w]*\n(.)\5{3,}\n'
+  - '[ \w]+\{doc\}`[^\n]+`[ \w]*\n(.)\6{3,}\n'
