Updated some expressions and the message

--- a/styles/Canonical/020-Cliche-words-and-phrases.yml
+++ b/styles/Canonical/020-Cliche-words-and-phrases.yml
@@ -1,20 +1,20 @@
 # 20 - Cliché words and phrases - avoid these.
 
 extends: existence
-message: "'%s' is cliché"
+message: "Avoid the phrase '%s'"
 link: https://docs.ubuntu.com/styleguide/en#words-and-phrases-to-avoid
 level: warning
 ignorecase: true
 tokens:
-  - 'allow.*?' # This suggests that we are in a position of power, permitting users or customers to conduct certain activities.
-  - the ability to # Use 'We can' instead of 'We have the ability to'
-  - able to # Use 'Ubuntu can' instead of 'Ubuntu is able to'
+  - 'allow.*?'
+  - ability to 
+  - able to 
   - 'not only.*?but also'
-  - eliminate
-  - execute
-  - terminate
-  - kill
-  - 'disruptive.*?'
+  - 'eliminat.*?'
+  - 'execute.*?'
+  - 'terminate.*?'
+  - 'kill.*?'
+  - 'disrupt.*?'
   - 'explosive.*?'
   - 'leverag.*?'
   - 'ecosystem.*?'
@@ -22,8 +22,9 @@ tokens:
   - in order to
   - form factor
   - 'use case.*?'
-  - end user # Use 'user' instead
+  - 'end user.*?' # Use 'user' instead
   - 'linux.*?for human beings'
   - 'thing.*?'
   - next level
-  - space
+  - 'space.*?'
+  - 'harness.*?'
