Updating "disrupt" to "disruptive"
To accommodate valid usage related to the disruption of technical services.

Co-authored-by: Michael Park <100246223+SecondSkoll@users.noreply.github.com>

--- a/styles/Canonical/020-Cliche-words-and-phrases.yml
+++ b/styles/Canonical/020-Cliche-words-and-phrases.yml
@@ -14,7 +14,7 @@ tokens:
   - 'execute.*?'
   - 'terminate.*?'
   - 'kill.*?'
-  - 'disrupt.*?'
+  - 'disruptive.*?'
   - 'explosive.*?'
   - 'leverag.*?'
   - 'ecosystem.*?'
