--- a/styles/Canonical/014b-Numbers-with-four-or-more-digits-must-have-comma-separators.yml
+++ b/styles/Canonical/014b-Numbers-with-four-or-more-digits-must-have-comma-separators.yml
@@ -1,7 +1,12 @@
 extends: existence
 message: Numbers greater than 999 should have a comma separator - '%s'
 link: https://docs.ubuntu.com/styleguide/en#numbers
-scope: raw
+scope:
+  - heading
+  - list
+  - sentence
+  - table.header
+  - table.cell
 ignorecase: true
 level: warning
 tokens:
