--- a/styles/Canonical/003-Ubuntu-names-versions.yml
+++ b/styles/Canonical/003-Ubuntu-names-versions.yml
@@ -13,10 +13,14 @@ scope:
 level: suggestion
 tokens:
   # LTS releases should be followed by "LTS" suffix.
-  - 'Ubuntu (24|22|20|18)\.04(?! LTS)'
+  - 'Ubuntu (24|22|20|18|16|14|12|10|8)\.04(?! LTS)'
+  - 'Ubuntu 6\.06(?! LTS)'
   # Non-LTS releases should not be followed by "LTS" suffix.
-  - 'Ubuntu (23\.10|23\.04|22\.10|21\.10|21\.04|20\.10|19\.10|19\.04|18\.10|17\.10|17\.04) LTS'
+  - 'Ubuntu (23|22|21|20|19|18|17|16|15|14|13|12|11|10|9|8|7|6\5\4)\.10 LTS'
+  - 'Ubuntu (23|21|19|17|15|13|11|10|9|8|7|5)\.04 LTS'
+  - 'Ubuntu 6\.06 LTS'
   # All releases should match the code name.
+  - 'Ubuntu 24\.10 \((?!(Oracular|Oracular Oriole)\))'
   - 'Ubuntu 24\.04 LTS \((?!(Noble|Noble Numbat)\))'
   - 'Ubuntu 23\.10 \((?!(Mantic|Mantic Minotaur)\))'
   - 'Ubuntu 23\.04 \((?!(Lunar|Lunar Lobster)\))'
@@ -29,6 +33,35 @@ tokens:
   - 'Ubuntu 19\.10 \((?!(Eoan|Eoan Ermine)\))'
   - 'Ubuntu 19\.04 \((?!(Disco|Disco Dingo)\))'
   - 'Ubuntu 18\.10 \((?!(Cosmic|Cosmic Cuttlefish)\))'
-  - 'Ubuntu 18\.04 LTS \((?!(Bionic|Bionic Beaver)\))'  
-
+  - 'Ubuntu 18\.04 LTS \((?!(Bionic|Bionic Beaver)\))'
+  - 'Ubuntu 17\.10 \((?!(Artful|Artful Aardvark)\))'
+  - 'Ubuntu 17\.04 \((?!(Zesty|Zesty Zapus)\))'
+  - 'Ubuntu 16\.10 \((?!(Yakkety|Yakkety Yak)\))'
+  - 'Ubuntu 16\.04 LTS \((?!(Xenial|Xenial Xerus)\))'
+  - 'Ubuntu 15\.10 \((?!(Wily|Wily Werewolf)\))'
+  - 'Ubuntu 15\.04 \((?!(Vivid|Vivid Vervet)\))'
+  - 'Ubuntu 14\.10 \((?!(Utopic|Utopic Unicorn)\))'
+  - 'Ubuntu 14\.04 LTS \((?!(Trusty|Trusty Tahr)\))'
+  - 'Ubuntu 13\.10 \((?!(Saucy|Saucy Salamander)\))'
+  - 'Ubuntu 13\.04 \((?!(Raring|Raring Ringtail)\))'
+  - 'Ubuntu 12\.10 \((?!(Quantal|Quantal Quetzal)\))'
+  - 'Ubuntu 12\.04 LTS \((?!(Precise|Precise Pangolin)\))'
+  - 'Ubuntu 11\.10 \((?!(Oneiric|Oneiric Ocelot)\))'
+  - 'Ubuntu 11\.04 \((?!(Natty|Natty Narwhal)\))'
+  - 'Ubuntu 10\.10 \((?!(Maverick|Maverick Meerkat)\))'
+  - 'Ubuntu 10\.04 \((?!(Lucid|Lucid Lynx)\))'
+  - 'Ubuntu 10\.04 LTS \((?!(Lucid|Lucid Lynx)\))'
+  - 'Ubuntu 9\.10 \((?!(Karmic|Karmic Koala)\))'
+  - 'Ubuntu 9\.04 \((?!(Jaunty|Jaunty Jackalope)\))'
+  - 'Ubuntu 8\.10 \((?!(Intrepid|Intrepid Ibex)\))'
+  - 'Ubuntu 8\.04 LTS \((?!(Hardy|Hardy Heron)\))'
+  - 'Ubuntu 8\.04 \((?!(Hardy|Hardy Heron)\))'
+  - 'Ubuntu 7\.10 \((?!(Gutsy|Gutsy Gibbon)\))'
+  - 'Ubuntu 7\.04 \((?!(Feisty|Feisty Fawn)\))'
+  - 'Ubuntu 6\.10 \((?!(Edgy|Edgy Eft)\))'
+  - 'Ubuntu 6\.06 LTS \((?!(Dapper|Dapper Drake)\))'
+  - 'Ubuntu 6\.06 \((?!(Dapper|Dapper Drake)\))'
+  - 'Ubuntu 5\.10 \((?!(Breezy|Breezy Badger)\))'
+  - 'Ubuntu 5\.04 \((?!(Hoary|Hoary Hedgehog)\))'
+  - 'Ubuntu 4\.10 \((?!(Warty|Warty Warthog)\))'
   
