add section on diataxis to style guide

--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -16,6 +16,8 @@ navigation:
 
     children:
 
+    - title: Diátaxis
+      location: '#diataxis'
     - title: Spelling
       location: '#spelling'
     - title: Branding
