--- a/styles/Canonical/013-Spell-out-numbers-below-10.yml
+++ b/styles/Canonical/013-Spell-out-numbers-below-10.yml
@@ -7,11 +7,11 @@ scope:
   - sentence
   - table.header
   - table.cell
-level: suggestion
+level: warning
 swap:
   0: zero
   1: one
-  2 : two
+  2: two
   3: three
   4: four
   5: five
