Add Canonical vocabulary (#37)
* Add Canonical vocabulary

* Enable Vale style

Co-authored-by: Michael Park <100246223+SecondSkoll@users.noreply.github.com>

---------

Co-authored-by: Yana Hontyk <yhontyk@localhost.localdomain>
Co-authored-by: Michael Park <100246223+SecondSkoll@users.noreply.github.com>

--- a/vale.ini
+++ b/vale.ini
@@ -3,6 +3,8 @@ MinAlertLevel = suggestion
 
 [*]
 
-BasedOnStyles = Canonical
+BasedOnStyles = Canonical, Vale
+
+Vocab = Canonical
 
 IgnoredScopes = 
