--- a/styles/Canonical/004-Canonical-product-names.yml
+++ b/styles/Canonical/004-Canonical-product-names.yml
@@ -1,5 +1,5 @@
 extends: substitution
-message: "Did you really mean '%s' instead of '%s'?"
+message: "Use '%s' instead of '%s'"
 link: https://docs.ubuntu.com/styleguide/en/#other-canonical-products
 ignorecase: false
 level: suggestion
