Update action.yml (#63)
* Update action.yml

---------

Co-authored-by: a-velasco <avgomes42@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,12 @@ runs:
         mkdir -p styles/Canonical
         cp $ACTION_DIR/styles/Canonical/* styles/Canonical/
         echo "Styles copied to working dir"
+        fi
+
+        if ! test -d ./styles/config/vocabularies/Canonical; then
+        mkdir -p styles/config/vocabularies/Canonical
+        cp $ACTION_DIR/styles/config/vocabularies/Canonical/* styles/config/vocabularies/Canonical/
+        echo "Vocab copied to working dir"
         tree styles
         fi
 
