Update Vale style checks to fix false positives

--- a/styles/Canonical/001-English-words-spelling-suggestions.yml
+++ b/styles/Canonical/001-English-words-spelling-suggestions.yml
@@ -76,6 +76,7 @@ swap:
   'realization': realisation
   'realize': realise
   'recognize': recognise
+  'repo': repository
   'rumor': rumour
   'sausages, beans, and mash': sausages, beans and mash
   'signaling': signalling
