--- a/styles/Canonical/012-Date-format.yml
+++ b/styles/Canonical/012-Date-format.yml
@@ -1,7 +1,7 @@
 extends: existence
 message: Use the '1 January 1970' format instead of '%s'
 link: https://docs.ubuntu.com/styleguide/en/#dates
-scope: raw
+scope: paragraph
 ignorecase: true
 level: warning
 tokens:
@@ -13,4 +13,6 @@ tokens:
   - (\d{4}|\d{2})[^\w\d\r\n:](0?[1-9]|1[0-2])[^\w\d\r\n:](0?[1-9]|[12]\d|30|31)
   # "1st of January 1970"
   - \d{1,2}(st|nd|rd|th) of (?:Jan(?:uary)?|Feb(?:ruary)?|Mar(?:ch)?|Apr(?:il)|May|Jun(?:e)|Jul(?:y)|Aug(?:ust)|Sep(?:tember)?|Oct(?:ober)|Nov(?:ember)?|Dec(?:ember)?) \d{4}
+  # "January 1st, 1970"
+  - (?:Jan(?:uary)?|Feb(?:ruary)?|Mar(?:ch)?|Apr(?:il)|May|Jun(?:e)|Jul(?:y)|Aug(?:ust)|Sep(?:tember)?|Oct(?:ober)|Nov(?:ember)?|Dec(?:ember)?) \d{1,2}(st|nd|rd|th)(,|) \d{4}
   
