--- a/styles/Canonical/013-Spell-out-numbers-below-10.yml
+++ b/styles/Canonical/013-Spell-out-numbers-below-10.yml
@@ -1,5 +1,5 @@
 extends: substitution
-message: "Use '%s' instead of '%s'"
+message: "Consider using '%s' instead of '%s'"
 link: https://docs.ubuntu.com/styleguide/en#numbers
 scope:
   - heading
