[REVIEW] Address feedback, improve regex
Make all patterns cover many more edge cases. Avoid `nonword` where possible. Don't scope for `raw`.

--- a/styles/Canonical/021b-latinisms-to-reconsider.yml
+++ b/styles/Canonical/021b-latinisms-to-reconsider.yml
@@ -1,19 +1,10 @@
 # 021 - Latinisms that we strongly advise against
-# Since Vale substitutions can't ignore word boundaries, meaning they can't detect the punctuation in "i.e." and "&c", we merely check for them and then notify the user.
 
 extends: existence
-message: |
-  Instead of Latin abbreviations, consider using an English equivalent.
-  Try not to use '&c', 'e.g.', 'i.e.', or 'n.b.'.
-  For 'a.m.', 'AM', 'p.m.', and 'PM', use 24-hour time.
+message: Instead 'a.m.', 'AM', 'p.m.', and 'PM', use 24-hour time.
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
-scope: raw
 nonword: true
 tokens:
-  - '&c'
-  - 'e\.g\.'
-  - 'i\.e\.'
-  - 'n\.b\.'
-  - '(a\.m\.|[A]\.?[M]\.?)'
-  - '(p\.m\.|[P]\.?[M]\.?)'
+  - '\b(?:a\.m\.(?!\w)|a.m(?![\.\w])|AM\b|A\.M\.(?!\w)|A\.M(?![\.\w]))'
+  - '\b(?:p\.m\.(?!\w)|p.m(?![\.\w])|PM\b|P\.M\.(?!\w)|P\.M(?![\.\w]))'
