--- a/styles/Canonical/021a-latinisms-with-english-equivalents.yml
+++ b/styles/Canonical/021a-latinisms-with-english-equivalents.yml
@@ -1,36 +1,36 @@
 # 021 - Latinisms that have English equivalents
 
 extends: substitution
-message: "Prefer English over Latin. Instead of '%[2]s', use %[1]s."
+message: "Instead of '%[2]s', use %[1]s."
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
-scope: raw
+nonword: true
 ignorecase: true
 swap:
-  a priori: "'self-evident', 'presupposed', 'presumed', or 'assumed'"
-  ad hoc: "'unscheduled', 'unexpected', 'improvised', 'temporary', or 'bespoke'"
-  ad infinitum: "'and so on', 'to the fullest extent', or 'recursively'"
-  cf: "'refer to'"
-  caveat: "'warning' or 'provision'"
-  circa: "'around' or 'near'"
-  de facto: "'current', 'actual', or 'established'"
-  ergo: "'therefore' or 'hence'"
-  (?:et cetera|etc): "'and so on'"
-  (?:exempli gratia|eg): "'for example', 'as an example', or 'such as'"
-  gratis: "'free'"
-  (?:id est|ie): "'that is' or 'in other words'"
-  in situ: "'in place'"
-  (?:nota bene|nb): "'note', 'notice', 'observe', 'pay attention to', or 'keep your eye on'"
-  per: "'each' or 'every'"
-  per diem: "'every day'"
-  per capita: "'every/each person'"
-  per se: "'necessarily' or 'intrinsically'"
-  pro bono: "'freely given' or 'volunteered'"
-  proviso: "'condition' or 'provided that'"
-  stanza: "'division', 'block', or 'paragraph'" 
-  status quo: "'state' or 'state of things'"
-  verbatim: "'exact words', 'exactly'"
-  (?:versus|vs): "'compared to/with' or 'opposed to'"
-  via: "'through', 'with', or 'using'"
-  vice versa: "'the reverse' or 'the other way around'"
-  viz: "'specifically' or 'namely'"
+  \ba\spriori\b: "'self-evident', 'presupposed', 'presumed', or 'assumed'"
+  \bad\shoc\b: "'unscheduled', 'unexpected', 'improvised', 'temporary', or 'bespoke'"
+  \bad\sinfinitum\b: "'and so on', 'to the fullest extent', or 'recursively'"
+  \bcf\.?\b: "'refer to'"
+  \bcaveat\b: "'warning' or 'provision'"
+  \bcirca\b: "'around' or 'near'"
+  \bde\sfacto\b: "'current', 'actual', or 'established'"
+  \bergo\b: "'therefore' or 'hence'"
+  (?:\bet\scetera\b|\betcetera\b|\betc\.?\b|(?<!\w)\&c\b): "'and so on'"
+  \b(?:exempli\sgratia|eg\b|e\.g\.(?!\w)|e\.g(?![\.\w])): "'for example', 'as an example', or 'such as'"
+  \bgratis\b: "'free'"
+  \b(?:id\sest\b|ie\b|i\.e\.(?!\w)|i\.e(?![\.\w])): "'that is' or 'in other words'"
+  \bin\ssitu\b: "'in place'"
+  \b(?:nota\sbene\b|nb\b|n\.b\.(?!\w)|n\.b(?![\.\w])): "'note', 'notice', 'observe', 'pay attention to', or 'keep your eye on'"
+  \bper\b: "'each', 'every', or 'according to'"
+  \bper\sdiem\b: "'every day'"
+  \bper\scapita\b: "'every/each person'"
+  \bper\sse\b: "'necessarily' or 'intrinsically'"
+  \bpro\sbono\b: "'freely given' or 'volunteered'"
+  \bproviso\b: "'condition' or 'provided that'"
+  \bstanza\b: "'division', 'block', or 'paragraph'" 
+  \bstatus\squo\b: "'state' or 'state of things'"
+  \bverbatim\b: "'exact words', 'exactly'"
+  \b(?:versus|vs\.(?!\w)|vs(?![\.\w])): "'compared to/with' or 'opposed to'"
+  \bvia\b: "'through', 'with', or 'using'"
+  \bvice\sversa\b: "'the reverse' or 'the other way around'"
+  \b(viz\.(?!\w)|viz(?![\w\.])): "'specifically' or 'namely'"
