[REVIEW] Add missing word

--- a/styles/Canonical/021b-latinisms-to-reconsider.yml
+++ b/styles/Canonical/021b-latinisms-to-reconsider.yml
@@ -1,7 +1,7 @@
 # 021 - Latinisms that we strongly advise against
 
 extends: existence
-message: Instead 'a.m.', 'AM', 'p.m.', and 'PM', use 24-hour time.
+message: Instead of 'a.m.', 'AM', 'p.m.', and 'PM', use 24-hour time.
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
 nonword: true
