--- a/vale.ini
+++ b/vale.ini
@@ -1,8 +1,34 @@
 StylesPath = styles
-MinAlertLevel = suggestion
+MinAlertLevel = warning
 Vocab = Canonical
 IgnoredScopes = 
 
 [*.{md,txt,rst,html}]
 
-BasedOnStyles = Canonical, Vale
+BasedOnStyles = Canonical
+
+# this enumerates all of the current rules with their suggested
+# severity level. This makes it easier to edit for specific use cases
+
+Canonical.001-English-words-spelling-suggestions  = suggest
+Canonical.003-Ubuntu-names-versions = warning              
+Canonical.004-Canonical-product-names = warning           
+Canonical.005-Industry-product-names = warning             
+Canonical.006-Contractions-forbidden = warning             
+Canonical.007-Headings-sentence-case = suggest           
+Canonical.008-Headings-no-period = warning               
+Canonical.009-Headings-no-links = error                
+Canonical.010-Punctuation-double-spaces = warning         
+Canonical.011-Headings-not-followed-by-heading = warning 
+Canonical.013-Spell-out-numbers-below-10 = suggest                                   
+Canonical.014a-Numbers-greater-than-nine-should-be-in-numeric-form = suggest         
+Canonical.014b-Numbers-with-five-or-more-digits-must-have-comma-separators  = suggest
+Canonical.016-No-inline-comments = warning
+Canonical.017-Avoid-long-code-blocks = warning
+Canonical.019-no-google-drive-images = error
+Canonical.020-Cliche-words-and-phrases = suggest
+Canonical.025a-latinisms-with-english-equivalents = suggest
+Canonical.025b-latinisms-to-reconsider = suggest
+Canonical.025c-latinisms-to-avoid = warning
+Canonical.400-Enforce-inclusive-terms = error
+Canonical.500-Repeated-words = NO
