feat: ignored classes
Adds missing rules to config, and adjusts rule levels.

--- a/vale.ini
+++ b/vale.ini
@@ -2,6 +2,7 @@ StylesPath = styles
 MinAlertLevel = warning
 Vocab = Canonical
 IgnoredScopes = 
+IgnoredClasses = woke-ignore, vale-ignore
 
 [*.{md,txt,rst,html}]
 
@@ -11,18 +12,20 @@ BasedOnStyles = Canonical
 # severity level. This makes it easier to edit for specific use cases
 
 Canonical.001-English-words-spelling-suggestions  = suggest
-Canonical.003-Ubuntu-names-versions = warning              
-Canonical.004-Canonical-product-names = warning           
-Canonical.005-Industry-product-names = warning             
+Canonical.003-Ubuntu-names-versions = error              
+Canonical.004-Canonical-product-names = error           
+Canonical.005-Industry-product-names = error             
 Canonical.006-Contractions-forbidden = warning             
-Canonical.007-Headings-sentence-case = suggest           
+Canonical.007-Headings-sentence-case = error           
 Canonical.008-Headings-no-period = warning               
-Canonical.009-Headings-no-links = error                
+Canonical.009-Headings-no-links = warning                
 Canonical.010-Punctuation-double-spaces = warning         
-Canonical.011-Headings-not-followed-by-heading = warning 
-Canonical.013-Spell-out-numbers-below-10 = suggest                                   
+Canonical.011-Headings-not-followed-by-heading = warning
+Canonical.012-Date-format = warning
+Canonical.013-Spell-out-numbers-below-10 = warning                                   
 Canonical.014a-Numbers-greater-than-nine-should-be-in-numeric-form = suggest         
 Canonical.014b-Numbers-with-five-or-more-digits-must-have-comma-separators  = suggest
+Canonical.015-No-prompts-in-comments = warning
 Canonical.016-No-inline-comments = warning
 Canonical.017-Avoid-long-code-blocks = warning
 Canonical.019-no-google-drive-images = error
