fix: Rule 016 - no inline comments (#93)
* fix: Rule 016 - no inline comments

* fix: prevent identification of myst directives

--- a/styles/Canonical/016-No-inline-comments.yml
+++ b/styles/Canonical/016-No-inline-comments.yml
@@ -4,7 +4,7 @@ scope: raw
 nonword: true
 level: warning
 tokens:
-  - ^```.*\n(([^\n`][^\n#]*\n|\n))*([^\n#]+#.*\n)+([^\n`]*\n)*```
-  - ^```.*\n([^\n`][^\n]*\n|\n)*([^\n\/][^\n\/]+\/\/.*\n)+([^\n`]*\n)*```
-  - '\.\. code(-block)?:.*\n(\s+.*#.*\n)+'
-  - '\.\. code(-block)?:.*\n(\s+.*//.*\n)+'
+  - ^```[^\n\{\}]*\n(([^\n`][^\n#]*\n|\n))*([^\n#]+ +#.*\n)+([^\n`]*\n)*```
+  - ^```[^\n\{\}]*\n([^\n`][^\n]*\n|\n)*([^\n\/][^\n\/]+ +\/\/.*\n)+([^\n`]*\n)*```
+  - '\.\. code(-block)?:.*\n( {3,}:\w+:\n)*(\s+.* +#.*\n)+'
+  - '\.\. code(-block)?:.*\n( {3,}:\w+:\n)*(\s+.* +\/\/.*\n)+'
