Canonical.000-US-spellcheck = error

--- a/vale.ini
+++ b/vale.ini
@@ -11,6 +11,7 @@ BasedOnStyles = Canonical
 # this enumerates all of the current rules with their suggested
 # severity level. This makes it easier to edit for specific use cases
 
+Canonical.000-US-spellcheck = error
 Canonical.001-English-words-spelling-suggestions  = suggest
 Canonical.003-Ubuntu-names-versions = error              
 Canonical.004-Canonical-product-names = error           
