--- a/styles/Canonical/001-English-words-spelling-suggestions.yml
+++ b/styles/Canonical/001-English-words-spelling-suggestions.yml
@@ -1,96 +1,115 @@
 extends: substitution
-message: "Use British English spelling, '%s' instead of '%s'."
+message: "Use US English spelling, '%s' instead of '%s'."
 link: https://docs.ubuntu.com/styleguide/en/#spelling
 ignorecase: true
 level: suggestion
 action:
   name: replace
 swap:
-  'acknowledgment': acknowledgement
-  'airplane': aeroplane
-  'aluminum': aluminium
-  'analog': analogue
-  'analyze': analyse
-  'annex': annexe
-  'apologize': apologise
-  'armor': armour
-  'authorization': authorisation
-  'authorize': authorise
-  'authorizer': authoriser
-  'behavior': behaviour
-  'canceled': cancelled
-  'capitalize': 'capitalise'
-  'catalog': catalogue
-  'center': centre
-  'checker': chequer
-  'cipher': cypher
-  'color': colour
-  'counseling': counselling
-  'counselor': counsellor
-  'defense': defence
-  'dialed': dialled
-  'dialer': dialler
-  'emphasize': emphasise
-  'encyclopedia': encyclopaedia
-  'endeavor': endeavour
-  'enrollment': enrolment
-  'equaling': equalling
-  'favor': favour
-  'favorite': favourite
-  'fiber': fibre
-  'flakey': flaky
-  'flavor': flavour
-  'fulfill': fulfil
-  'furor': furore
-  'generalize': generalise
-  'glycerin': glycerine
-  'gray': grey
-  'harbor': harbour
-  'harmonization': harmonisation
-  'harmonize': harmonise
-  'honor': honour
-  'humor': humour
-  'in side': inside
-  'industrialize': industrialise
-  'installment': instalment
-  'italicize': italicise
-  'judgment': judgement
-  'kilometer': kilometre
-  'labeled': labelled
-  'labor': labour
-  'liter': litre
-  'lodgement': lodgment
-  'maneuver': manoeuvre
-  'modeling': modelling
-  'mold': mould
-  'monolog': monologue
-  'offense': offence
-  'organization': organisation
-  'oriented': orientated
-  'parlor': parlour
-  'percent': per cent
-  'plow': plough
-  'pretense': pretence
-  'quarreled': quarrelled
-  'quarreling': quarrelling
-  'realization': realisation
-  'realize': realise
-  'recognize': recognise
-  'rumor': rumour
-  'sausages, beans, and mash': sausages, beans and mash
-  'signaling': signalling
-  'skeptic': sceptic
-  'skeptical': sceptical
-  'skillful': skilful
-  'specialty': speciality
-  'theater': theatre
-  'tranquility': tranquillity
-  'traveled': travelled
-  'traveler': traveller
-  'traveling': travelling
-  'urbanization': urbanisation
-  'virtualize': virtualise
-  'virtualization': virtualisation
-  'woolen': woollen
-  'yogurt': yoghurt
+  aeon: eon
+  aeroplane: airplane
+  ageing: aging
+  aluminium: aluminum
+  anaemia: anemia
+  anaesthesia: anesthesia
+  analyse: analyze
+  annexe: annex
+  apologise: apologize
+  authorisation: authorization
+  authorise: authorize
+  authorised: authorized
+  authorising: authorizing
+  behaviour: behavior
+  bellow: below
+  busses: buses
+  calibre: caliber
+  categorise: categorize
+  categorised: categorized
+  categorises: categorizes
+  categorising: categorizing
+  centre: center
+  cheque: check
+  civilisation: civilization
+  civilise: civilize
+  colour: color
+  cosy: cozy
+  cypher: cipher
+  defence: defense
+  dependant: dependent
+  distil: distill
+  draught: draft
+  encyclopaedia: encyclopedia
+  enquiry: inquiry
+  enrol: enroll
+  enrolment: enrollment
+  enthral: enthrall
+  favourite: favorite
+  fibre: fiber
+  fillet: filet
+  flavour: flavor
+  fulfil: fulfill
+  furore: furor
+  gaol: jail
+  grey: gray
+  honour: honor
+  humour: humor
+  initialled: initialed
+  initialling: initialing
+  instil: instill
+  jewellery: jewelry
+  labelled: labeled
+  labelling: labeling
+  labour: labor
+  libellous: libelous
+  licence: license
+  likeable: likable
+  liveable: livable
+  lustre: luster
+  manoeuvre: maneuver
+  marvellous: marvelous
+  meagre: meager
+  metre: meter
+  modelling: modeling
+  moustache: mustache
+  neighbour: neighbor
+  normalise: normalize
+  offence: offense
+  optimise: optimize
+  optimised: optimized
+  optimising: optimizing
+  organise: organize
+  orientated: oriented
+  paralyse: paralyze
+  plough: plow
+  pretence: pretense
+  programme: program
+  pyjamas: pajamas
+  rateable: ratable
+  realise: realize
+  recognise: recognize
+  reconnoitre: reconnoiter
+  rumour: rumor
+  sabre: saber
+  saleable: salable
+  saltpetre: saltpeter
+  sceptic: skeptic
+  sepulchre: sepulcher
+  signalling: signaling
+  sizeable: sizable
+  skilful: skillful
+  smoulder: smolder
+  sombre: somber
+  speciality: specialty
+  spectre: specter
+  splendour: splendor
+  standardise: standardize
+  standardised: standardized
+  sulphur: sulfur
+  theatre: theater
+  travelled: traveled
+  traveller: traveler
+  travelling: traveling
+  unshakeable: unshakable
+  wilful: willful
+  yoghurt: yogurt
   
