fix: regex for rule

--- a/styles/Canonical/019-no-google-drive-images.yml
+++ b/styles/Canonical/019-no-google-drive-images.yml
@@ -10,6 +10,6 @@ tokens:
   - '<[\w\.:\/-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+>'
   - '{image}[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
   - '{figure}[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
-  - '.. image::[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
-  - '.. figure::[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
+  - '\.\. image::[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
+  - '\.\. figure::[\w\.:\/\-=? "]+(drive.google|drive.usercontent.google)[\w\.:\/\-=? "]+'
   
