fix: capture code and sourcecode directives

--- a/styles/Canonical/016-No-inline-comments.yml
+++ b/styles/Canonical/016-No-inline-comments.yml
@@ -6,5 +6,5 @@ level: warning
 tokens:
   - ^```[^\n\{\}]*\n(([^\n`][^\n#]*\n|\n))*([^\n#]+ +#.*\n)+([^\n`]*\n)*```
   - ^```[^\n\{\}]*\n([^\n`][^\n]*\n|\n)*([^\n\/][^\n\/]+ +\/\/.*\n)+([^\n`]*\n)*```
-  - '\.\. code(-block)?:.*\n( {3,}:\w+:\n)*(\s+.* +#.*\n)+'
-  - '\.\. code(-block)?:.*\n( {3,}:\w+:\n)*(\s+.* +\/\/.*\n)+'
+  - '\.\. (code-block|code|sourcecode)::.*\n( {3,}:\w+:\n)*(\s+.* +#.*\n)+'
+  - '\.\. (code-block|code|sourcecode)::.*\n( {3,}:\w+:\n)*(\s+.* +\/\/.*\n)+'
