--- a/styles/Canonical/000-US-spellcheck.yml
+++ b/styles/Canonical/000-US-spellcheck.yml
@@ -7,6 +7,5 @@ dictionaries:
   - en_US
   # - en_GB
 filters:
- - '\.\. (code-block|code|sourcecode)::.*(\n {3,}:\w+:( .+)?\n)*(\n {3,}.*|\n)*(?!\n^[\S])'
+ - '\.\. (code-block|code|sourcecode)::.*(\n {3,}:\w+:( .+)?\n)*(\n {3,}.*|\n)*(\n^\S)'
  - ^```[^\n\{\}]*\n(([^\n`].*\n|\n))*```
-
