--- a/styles/Canonical/005-Industry-product-names.yml
+++ b/styles/Canonical/005-Industry-product-names.yml
@@ -16,5 +16,5 @@ swap:
   KubeFlow : 'Kubeflow' 
   Google cloud : 'Google Cloud Platform'
   Influxdb : 'InfluxDB' 
-  MM : 'Mattermost'
+  mattermost : 'Mattermost'
   
