add reST-only ignore list for spelling checks

--- a/vale.ini
+++ b/vale.ini
@@ -36,3 +36,14 @@ Canonical.025b-latinisms-to-reconsider = suggest
 Canonical.025c-latinisms-to-avoid = warning
 Canonical.400-Enforce-inclusive-terms = error
 Canonical.500-Repeated-words = NO
+
+[*.rst]
+BasedOnStyles = Canonical
+
+# inline literal roles
+TokenIgnores = :relatedlinks:, ``.+?``, :samp:`.+?`, :file:`.+?`, :command:`.+?`
+TokenIgnores = :program:`.+?`, :literal:`.+?`, :kbd:`.+?`, :file:`.+?`, :math:`.+?`
+TokenIgnores = :token:`.+?`, :regexp:`.+?`, :command:`.+?`, :option:`.+?`, :envvar:`.+?`
+
+# links defined elsewhere
+TokenIgnores = \`\w+\`_
