--- a/styles/Canonical/017-Avoid-long-code-blocks.yml
+++ b/styles/Canonical/017-Avoid-long-code-blocks.yml
@@ -7,6 +7,5 @@ nonword: true
 tokens:
   - '``` {0,1}({(code-block|code|sourcecode)}){0,1}[^{}\n]*\n(:[^\n]+:[^\n]*\n)*([^:\n]*\n){40,}```'
   - '::: {0,1}({(code-block|code|sourcecode)}){0,1}[^{}\n]*\n(:[^\n]+:[^\n]*\n)*([^:\n]*\n){40,}:::'
-  - '::\n\n( {3,12}[^\n]+\n){40,}'
-  - '\.\. (code-block|code|sourcecode)::\n( {3,12}:[^\n:]*:[^\n]*\n)*\n{0,1}( {3,60}[^\n]*\n){40,}'
-  
+  - '::\n\n( {3}[^\n]+\n){40,}'
+  - '\.\. (code-block|code|sourcecode)::\n( {3,12}:[^\n:]*:[^\n]*\n)*\n{0,1}(( {3}[^\n]+)?\n){40,}'
