--- a/vale.ini
+++ b/vale.ini
@@ -41,7 +41,7 @@ Canonical.500-Repeated-words = NO
 BasedOnStyles = Canonical
 
 # inline literal roles
-TokenIgnores = :relatedlinks:, ``.+?``, :samp:`.+?`, :file:`.+?`, :command:`.+?`
+TokenIgnores = :relatedlinks:, ``.+?``, :samp:`.+?`, :file:`.+?`, :command:`.+?`, :doc:`.+?`
 TokenIgnores = :program:`.+?`, :literal:`.+?`, :kbd:`.+?`, :file:`.+?`, :math:`.+?`
 TokenIgnores = :token:`.+?`, :regexp:`.+?`, :command:`.+?`, :option:`.+?`, :envvar:`.+?`
 
