fix: fixes token ignores

--- a/vale.ini
+++ b/vale.ini
@@ -41,9 +41,9 @@ Canonical.500-Repeated-words = NO
 BasedOnStyles = Canonical
 
 # inline literal roles
-TokenIgnores = :relatedlinks:, ``.+?``, :samp:`.+?`, :file:`.+?`, :command:`.+?`, :doc:`.+?`
-TokenIgnores = :program:`.+?`, :literal:`.+?`, :kbd:`.+?`, :file:`.+?`, :math:`.+?`
-TokenIgnores = :token:`.+?`, :regexp:`.+?`, :command:`.+?`, :option:`.+?`, :envvar:`.+?`
+TokenIgnores = (:relatedlinks:), (``.+?``), (:samp:`.+?`), (:file:`.+?`), (:command:`.+?`), (:doc:`.+?`)
+TokenIgnores = (:program:`.+?`), (:literal:`.+?`), (:kbd:`.+?`), (:math:`.+?`)
+TokenIgnores = (:token:`.+?`), (:regexp:`.+?`), (:command:`.+?`), (:option:`.+?`), (:envvar:`.+?`)
 
 # links defined elsewhere
-TokenIgnores = \`\w+\`_
+TokenIgnores = (\`\w+\`_)
