feat: scopes all unscoped rules

--- a/styles/Canonical/000-US-spellcheck.yml
+++ b/styles/Canonical/000-US-spellcheck.yml
@@ -2,6 +2,8 @@
 extends: spelling
 message: "The word '%s' seems to be misspelled."
 level: error
+scope:
+  - summary
 dicpath: "config/dictionaries/"
 dictionaries:
   - en_US
