--- a/styles/Canonical/010-Punctuation-double-spaces.yml
+++ b/styles/Canonical/010-Punctuation-double-spaces.yml
@@ -4,6 +4,8 @@ extends: existence
 message: "'%s' should have one space."
 link: 
 level: warning
+scope:
+  - summary
 nonword: true
 tokens:
   - '[a-z][.?!] {2,}[A-Z]'
