--- a/styles/Canonical/001-English-words-spelling-suggestions.yml
+++ b/styles/Canonical/001-English-words-spelling-suggestions.yml
@@ -3,6 +3,8 @@ message: "Use US English spelling, '%s' instead of '%s'."
 link: https://docs.ubuntu.com/styleguide/en/#spelling
 ignorecase: true
 level: suggestion
+scope:
+  - summary
 action:
   name: replace
 swap:
