--- a/styles/Canonical/025c-latinisms-to-avoid.yml
+++ b/styles/Canonical/025c-latinisms-to-avoid.yml
@@ -4,6 +4,8 @@ extends: existence
 message: "Don't use academic Latin terms like 'a posteriori', 'et al', and 'stet'."
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: warning
+scope:
+  - summary
 ignorecase: true
 tokens:
   - 'a\sposteriori'
