--- a/styles/Canonical/400-Enforce-inclusive-terms.yml
+++ b/styles/Canonical/400-Enforce-inclusive-terms.yml
@@ -1,6 +1,9 @@
 extends: existence
 message: "Replace '%s' with an inclusive term"
-scope: summary
+scope:
+  - sentence
+  - heading
+  - table
 level: error
 ignorecase: true
 tokens:
