feat: adds table scope

--- a/styles/Canonical/000-US-spellcheck.yml
+++ b/styles/Canonical/000-US-spellcheck.yml
@@ -4,6 +4,8 @@ message: "The word '%s' seems to be misspelled."
 level: error
 scope:
   - summary
+  - table.header
+  - table.cell
 dicpath: "config/dictionaries/"
 dictionaries:
   - en_US
