--- a/styles/Canonical/020-Cliche-words-and-phrases.yml
+++ b/styles/Canonical/020-Cliche-words-and-phrases.yml
@@ -6,6 +6,9 @@ link: https://docs.ubuntu.com/styleguide/en#words-and-phrases-to-avoid
 level: warning
 scope:
   - summary
+  - heading
+  - table.header
+  - table.cell
 ignorecase: true
 tokens:
   - 'allow.*?'
