--- a/styles/Canonical/500-Repeated-words.yml
+++ b/styles/Canonical/500-Repeated-words.yml
@@ -3,6 +3,9 @@ message: "'%s' is repeated!"
 level: warning
 scope:
   - summary
+  - heading
+  - table.header
+  - table.cell
 alpha: true
 ignorecase: true
 tokens:
