--- a/styles/Canonical/400-Enforce-inclusive-terms.yml
+++ b/styles/Canonical/400-Enforce-inclusive-terms.yml
@@ -3,6 +3,9 @@ message: "Replace '%s' with an inclusive term"
 level: error
 scope:
   - summary
+  - heading
+  - table.header
+  - table.cell
 ignorecase: true
 tokens:
   - white(\-)?list(ed|ing)?
