feat: scopes all rules and adds functional token ignores for RST (#112)
* fix: fixes token ignores

* feat: scopes all unscoped rules

* feat: adds table scope

--- a/styles/Canonical/000-US-spellcheck.yml
+++ b/styles/Canonical/000-US-spellcheck.yml
@@ -2,6 +2,10 @@
 extends: spelling
 message: "The word '%s' seems to be misspelled."
 level: error
+scope:
+  - summary
+  - table.header
+  - table.cell
 dicpath: "config/dictionaries/"
 dictionaries:
   - en_US
