--- a/styles/Canonical/006-Contractions-forbidden.yml
+++ b/styles/Canonical/006-Contractions-forbidden.yml
@@ -4,6 +4,11 @@ extends: substitution
 message: "Consider using '%s' instead of '%s'"
 link: https://docs.ubuntu.com/styleguide/en#contractions
 level: warning
+scope:
+  - summary
+  - heading
+  - table.header
+  - table.cell
 ignorecase: true
 swap:
   ain[`']t: isn't
