--- a/styles/Canonical/025a-latinisms-with-english-equivalents.yml
+++ b/styles/Canonical/025a-latinisms-with-english-equivalents.yml
@@ -4,6 +4,11 @@ extends: substitution
 message: "Instead of '%[2]s', use %[1]s."
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
+scope:
+  - summary
+  - heading
+  - table.header
+  - table.cell
 nonword: true
 ignorecase: true
 swap:
