--- a/styles/Canonical/025b-latinisms-to-reconsider.yml
+++ b/styles/Canonical/025b-latinisms-to-reconsider.yml
@@ -4,6 +4,11 @@ extends: existence
 message: Instead of 'a.m.', 'AM', 'p.m.', and 'PM', use 24-hour time.
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
+scope:
+  - summary
+  - heading
+  - table.header
+  - table.cell
 nonword: true
 tokens:
   - '\b[1|2]?:?\d?\d\s?(?:[AaPp]\.?[Mm]\.?)(?!\w+\b|\.)'
