--- a/styles/Canonical/500-Repeated-words.yml
+++ b/styles/Canonical/500-Repeated-words.yml
@@ -1,6 +1,11 @@
 extends: repetition
 message: "'%s' is repeated!"
 level: warning
+scope:
+  - summary
+  - heading
+  - table.header
+  - table.cell
 alpha: true
 ignorecase: true
 tokens:
