feat: exceptions added

--- a/styles/Canonical/400-Enforce-inclusive-terms.yml
+++ b/styles/Canonical/400-Enforce-inclusive-terms.yml
@@ -15,7 +15,7 @@ tokens:
   - white( )?hats?
   - illegal characters?
   - masters?
-  - slaves?
+  - (?<!jenkins\-)slaves?
   - chairman
   - foreman
   - dumm(y|ies)
