--- a/vale.ini
+++ b/vale.ini
@@ -42,7 +42,7 @@ BasedOnStyles = Canonical
 
 # inline literal roles
 TokenIgnores = (:relatedlinks:), (``.+?``), (:samp:`.+?`), (:file:`.+?`), (:command:`.+?`), (:doc:`.+?`)
-TokenIgnores = (:program:`.+?`), (:literal:`.+?`), (:kbd:`.+?`), (:math:`.+?`)
+TokenIgnores = (:program:`.+?`), (:literal:`.+?`), (:kbd:`.+?`), (:math:`.+?`), (:literalref:`.+?`)
 TokenIgnores = (:token:`.+?`), (:regexp:`.+?`), (:command:`.+?`), (:option:`.+?`), (:envvar:`.+?`)
 
 # links defined elsewhere
