feat: ignore tokens

--- a/vale.ini
+++ b/vale.ini
@@ -37,6 +37,8 @@ Canonical.025c-latinisms-to-avoid = warning
 Canonical.400-Enforce-inclusive-terms = error
 Canonical.500-Repeated-words = NO
 
+TokenIgnores = ({vale-ignore}`.+?`), ({woke-ignore}`.+?`)
+
 [*.rst]
 BasedOnStyles = Canonical
 
@@ -44,6 +46,7 @@ BasedOnStyles = Canonical
 TokenIgnores = (:relatedlinks:), (``.+?``), (:samp:`.+?`), (:file:`.+?`), (:command:`.+?`), (:doc:`.+?`)
 TokenIgnores = (:program:`.+?`), (:literal:`.+?`), (:kbd:`.+?`), (:math:`.+?`), (:literalref:`.+?`)
 TokenIgnores = (:token:`.+?`), (:regexp:`.+?`), (:command:`.+?`), (:option:`.+?`), (:envvar:`.+?`)
+TokenIgnores = (:vale-ignore:`.+?`), (:woke-ignore:`.+?`)
 
 # links defined elsewhere
 TokenIgnores = (\`\w+\`_)
